# AnlinxOS

./: .gitignore  .gitmodules  CMakeLists.txt  Ideas.txt  LICENSE  README.md  To-Do.txt
.github/: FUNDING.yml
ALX_Includes/: README.md
ALX_Includes/ALX/: ALX.hpp
ALX_Includes/ALX/linux/: KModule.hpp
ALX_Includes/ALX/linux_ext/: KModule.hpp  Vermagic.hpp
ALX_Includes/ALX64/: ALX64.hpp  Properties.hpp
ALX_Includes/ALX64/data/: Properties.hpp  Registry.hpp
CM_Config/: 00-PrepareBuild.cmake  Functions.cmake
ExtSources/miniz/: SourceInfo.cmake  miniz.c  miniz_tdef.c  miniz_tinfl.c  miniz_zip.c
Include/: ALX64.hpp
Include/ALX64/: Configuration.hpp  GRI.hpp  GzipIO.hpp  IPC.hpp  KModule.hpp  Permissions.hpp  Process.hpp  Renderer.hpp  Storage.hpp  Utilities.hpp  WLhandler.hpp  WLwindows.hpp  Windows.hpp
Include/ALX64/Linux/: KModule.hpp
Include/AnlinOS/Auth/: Auth.hpp  Group.hpp  User.hpp
Include/AnlinOS/IPC/: IPC.hpp
Include/AnlinOS/Shared/: Utils.hpp
Include/AnlinxOS/Auth/: Group.hpp  User.hpp
Include/AnlinxOS/Shared/: Utils.hpp
Include/miniz/: miniz.h
Scripts/: build.sh  builders.sh  install.sh
Sources/00-commons/: SourceInfo.cmake  Utils.cpp
Sources/ALX-Lib/: SourceInfo.cmake
Sources/ALX-Lib/Shared/: KModule.cpp
Sources/ALX64-Lib/: SourceInfo.cmake
Sources/ALX64-Lib/Linux/: KModule.cpp
Sources/ALX64-Lib/src/: GzipIO.cpp  Utilities.cpp
Sources/commons/: SourceInfo.cmake  Utils.cpp
Sources/corebin/: Corebin_Main.cpp  SourceInfo.cmake
Sources/corebin/libs/: FuncHeader.hpp  arch.cpp  base32.cpp  base64.cpp  basename.cpp  basenc.cpp  cat.cpp  chcon.cpp  chgrp.cpp  chmod.cpp  chown.cpp  chroot.cpp  chvt.cpp  cksum.cpp  comm.cpp  cp.cpp  csplit.cpp  cut.cpp  date.cpp  dd.cpp  df.cpp  dir.cpp  dircolors.cpp  dmesg.cpp  dorname.cpp  du.cpp  echo.cpp  env.cpp  expand.cpp  expr.cpp  factor.cpp  false.cpp  fmt.cpp  fold.cpp  free.cpp  groupadd.cpp  groupdel.cpp  groupmod.cpp  groups.cpp  head.cpp  (+93 more)
Sources/corebin/libs/handler/: FuncHeader.cpp
Sources/servicelayer/: SourceInfo.cmake
Sources/servicelayer/init/: BootMain.cpp
Sources/servicelayer/init_process/: BootMain.cpp  BootProcedure.hpp  BootProcess.hpp  Cmdline.cpp  Content.md  Devices.cpp
Sources/servicelayer/initfs_main/: BootMain.cpp  Cmdline.cpp  Cmdline.hpp  KModLoader.cpp  KModLoader.hpp
Sources/servicelayer/recovery_root/: .content
Sources/servicelayer/root_main/: .content
SystemConfig/: .gitignore  Instructions.cfg  SystemBuild.cfg
Targets/: Busybox.cmake  Kernel.cmake  zlib.cmake
Tests/ConfigGZ-Test/: SourceInfo.cmake  TestMain.cpp
Tests/KernelModuleInsertion/: SourceInfo.cmake  TestMain.cpp
